--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.work:work-runtime:2.7.0"
     implementation("io.coil-kt:coil-compose:2.4.0")
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation("io.ktor:ktor-client-core:2.3.3")
