--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 
 
 dependencies {
+    implementation 'co.yml:ycharts:2.1.0'
     implementation "androidx.work:work-runtime:2.7.0"
     implementation("io.coil-kt:coil-compose:2.4.0")
     implementation 'com.google.code.gson:gson:2.10.1'
